[gd_scene load_steps=9 format=3 uid="uid://djrwpddlst5gh"]

[ext_resource type="Script" path="res://scripts/Buildings/building_plot.gd" id="1_2f0q8"]
[ext_resource type="Texture2D" uid="uid://cgxs5slsiqkup" path="res://art/World/Player Map/Simple House.png" id="1_msqpl"]
[ext_resource type="Texture2D" uid="uid://y5hfsaic8y82" path="res://art/World/Player Map/Simple House Silhouette.png" id="2_56y7j"]
[ext_resource type="Texture2D" uid="uid://bkc1tjst7l04l" path="res://art/UI/UI pixelart Assets 4 -1.3/16x16/Set1/Set1-1.png" id="4_2s3ry"]
[ext_resource type="AudioStream" uid="uid://qsarnvvp1cta" path="res://sounds/Player Map/Building Process.wav" id="5_o58od"]
[ext_resource type="AudioStream" uid="uid://fy53ih1qmbyk" path="res://sounds/Player Map/Building Set.wav" id="6_y4ltn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2di3k"]
size = Vector2(269, 285)

[sub_resource type="CircleShape2D" id="CircleShape2D_fq0na"]
radius = 201.887

[node name="BuildingPlot" type="StaticBody2D" groups=["buildings"]]
script = ExtResource("1_2f0q8")

[node name="SimpleHouse" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_msqpl")

[node name="SimpleHouseSilhouette" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_56y7j")

[node name="Collider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_2di3k")

[node name="PlayerDetector" type="Area2D" parent="Collider"]

[node name="Collider" type="CollisionShape2D" parent="Collider/PlayerDetector"]
shape = SubResource("CircleShape2D_fq0na")

[node name="InteractibleButtonHelper" type="Sprite2D" parent="."]
visible = false
position = Vector2(4.76837e-07, -198)
scale = Vector2(1.75, 1.6875)
texture = ExtResource("4_2s3ry")

[node name="Label" type="Label" parent="InteractibleButtonHelper"]
offset_left = -3.42857
offset_top = -7.40741
offset_right = 36.5714
offset_bottom = 18.5926
theme_override_font_sizes/font_size = 10
text = "F"

[node name="Building" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_o58od")

[node name="Built" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_y4ltn")

[connection signal="body_entered" from="Collider/PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="Collider/PlayerDetector" to="." method="_on_player_detector_body_exited"]
